# foundry_agent_test_page_secure_vnet

./: .dockerignore  AI-Chat-Portal-Architecture-KO.pptx  README.md  test.html
.github/instructions/: system_instruction.md
.github/skills/aca-deployment-python/: SKILL.md
.github/skills/aca-env-deployment/: SKILL.md
.github/skills/authentication-js/: SKILL.md
.github/skills/azure-ai-foundry-agent/: SKILL.md
.github/skills/azure-speech-batch-transcription/: SKILL.md
.github/skills/conversation-state/: SKILL.md
.github/skills/fastapi-api-key-auth/: SKILL.md
.github/skills/fastapi-response-typing/: SKILL.md
.github/skills/fastapi-sse-streaming/: SKILL.md
.github/skills/genai-semantic-conventions/: SKILL.md
.github/skills/logging-js/: SKILL.md
.github/templates/: config-backend.yaml.j2  config-frontend.yaml.j2
.github/workflows/: 1.build_deploy_frontend_green.yml  2.promote_frontend_green.yml  3.rollback_frontend_to_blue.yml  build-backend.yml  build-backend.yml1  build-frontend.yml  build-frontend.yml1  deploy-backend.yml  deploy-frontend.yml  manual-deploy-backend.yml  manual-deploy-frontend.yml
backend/: .env  .env.example  Dockerfile  TELEMETRY.md  pyproject.toml  update.sh
backend/app/: agent.py  auth.py  auth_service.py  config.py  database.py  db_models.py  logging.py  main.py  mcp_service.py  models.py  setup_db.py  speech.py  telemetry.py
backend/app/agent_framework/: __init__.py  base.py
backend/example/: custom_logging.py  foundry_agent_cli.py  foundry_agent_cli_app_insight.py  toolbox.py
backend/tests/: test_agent.py  test_models.py
frontend/: .env  .env.example  Dockerfile  next.config.ts  package-lock.json  package.json  update.sh
utils/: base64url_encoded.py
(+59 files in other folders)
